# advent-of-code

./: .advent.code-workspace  .gitignore  Cargo.toml  log.txt  out.txt  puzzle.txt
2022/advent_11/: puzzle.txt
2022/advent_14/: puzzle.txt
2022/advent_15/: Cargo.toml
2022/advent_17/: Cargo.toml  heights.txt  log.txt  puzzle.txt
2022/advent_18/: inputtest2.txt  puzzle.txt
2022/advent_20/: Cargo.toml
2022/advent_21/: Cargo.toml  puzzle.txt
2022/advent_22/: Cargo.toml
2022/advent_24/: Cargo.toml
2022/advent_3/: Cargo.toml
2022/advent_4/: Cargo.toml
2022/advent_8/: Cargo.toml
2022/advent_9/: Puzzle.txt
2023/advent_1/: adventOfCode.cabal
2023/advent_2/: advent2.cabal  cabal.project
2023/advent_3/: Advent3.lean  Main.lean  README.md  lake-manifest.json  lakefile.lean
2023/advent_4/: Makefile  Parser.idr  Types.idr  advent_4.idr  advent_4.ipkg  puzzle.txt
2023/advent_lib/: advent-lib.cabal
2023/advent_lib/src/: AdventLib.hs
advent_12/: Cargo.toml  puzzle.txt
advent_12/src/: main.rs
advent_13/: Cargo.toml  puzzle.txt
advent_14/: Cargo.toml
advent_14/src/: data.rs  main.rs
advent_15/: puzzle.txt
advent_15/src/: data.rs
advent_16/: Cargo.toml
advent_17/src/: main.rs
advent_18/: inputtest3.txt
advent_18/src/: main.rs
advent_19/: Cargo.toml  puzzle.txt
advent_19/src/: data.rs  main.rs  parse.rs
advent_2/: Cargo.toml
advent_2/src/: main.rs
advent_20/: puzzle.txt
advent_20/src/: main.rs
advent_21/src/: main.rs
advent_22/: Cargo.toml
advent_22/src/: main.rs
advent_23/: Cargo.toml
advent_23/src/: main.rs
advent_24/: Cargo.toml
advent_24/src/: main.rs
advent_25/: Cargo.toml  puzzle.txt
advent_25/src/: main.rs
advent_5/: Cargo.toml
advent_6/: Cargo.toml
advent_7/src/: main.rs
advent_8/src/: main.rs
advent_lib/: Cargo.toml
advent_lib/src/: algorithms.rs  cord.rs  dir.rs  iters.rs  lib.rs  parse.rs
src/: algorithms.rs  astar.rs  cord.rs  data.rs  lib.rs  main.rs  parse.rs
(+23 files in other folders)
