[package]
name = "advent_19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent_lib = { version = "0.1.0", path = "../advent_lib" }
cached = { version = "0.44.0", default-features = false, features = ["proc_macro"] }
derive_more = "0.99.17"
enum-iterator = "1.4.1"
thiserror = "1.0.44"
yap = "0.11.0"

[profile.release]
overflow-checks = true