[package]
name = "advent_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
enum-iterator = "1.4.1"
itertools = "0.10.5"
nom = "7.1.3"
num-derive = "0.4.0"
num-iter = "0.1.43"
num-traits = "0.2.15"
thiserror = "1.0.44"
yap = "0.11.0"
